--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "polymer": "Polymer/polymer#master",
     "polymer-ui-icon-button": "Polymer/polymer-ui-icon-button#master",
     "polymer-flex-layout": "Polymer/polymer-flex-layout#master",
-    "web-animations-js": "web-animations/web-animations-js"
+    "web-animations-js": "web-animations/web-animations-js",
+    "polymer-google-jsapi": "Polymer/polymer-google-jsapi#master"
   }
 }
