--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "polymer-signals": "Polymer/polymer-signals#master",
     "polymer-ui-pages": "Polymer/polymer-ui-pages#master",
     "polymer-google-jsapi": "Polymer/polymer-google-jsapi#master",
-    "skycons": "darkskyapp/skycons#master"
+    "skycons": "darkskyapp/skycons#master",
+    "hammerjs": "EightMedia/hammer.js#master"
   }
 }
