--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-compress": "~0.7.0",
     "grunt-vulcanize": "~0.1.2",
     "grunt": "~0.4.2",
-    "grunt-contrib-htmlmin": "~0.2.0"
+    "grunt-contrib-htmlmin": "~0.2.0",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
