--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "grunt-vulcanize": "~0.1.2",
     "grunt": "~0.4.2",
     "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "load-grunt-tasks": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-mkdir": "~0.1.1",
+    "glob": "~3.2.9"
   }
 }
